force-app/main/default/objects/fpro__FieldPro__c/fpro__FieldPro__c.object-meta.xml
<CustomObject>
    <label>FieldPro</label>
    <nameField>
        <displayFormat>FieldPro-{000000}</displayFormat>
        <label>FieldPro Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FieldPro</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>