force-app/main/default/objects/fpro__FieldPro__c/fields/fpro__Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>fpro__Last_Modified_Date__c</fullName>
    <description>Date when this field was last modified in SF.</description>
    <inlineHelpText>Date when this field was last modified in SF.</inlineHelpText>
    <label>Last Modified Date</label>
    <type>DateTime</type>
</CustomField>