force-app/main/default/objects/fpro__FieldPro__c/fields/fpro__Last_Refresh_Date__c.field-meta.xml
<CustomField>
    <fullName>fpro__Last_Refresh_Date__c</fullName>
    <description>Timestamp of when the field analysis was last run.</description>
    <inlineHelpText>Timestamp of when the field analysis was last run.</inlineHelpText>
    <label>zz_Deprecated</label>
    <type>DateTime</type>
</CustomField>