force-app/main/default/objects/fpro__FieldPro__c/fields/fpro__Last_Refresh_Date_Usage__c.field-meta.xml
<CustomField>
    <fullName>fpro__Last_Refresh_Date_Usage__c</fullName>
    <description>The date on which populate % was calculated on this custom field.</description>
    <inlineHelpText>The date on which populate % was calculated on this custom field.</inlineHelpText>
    <label>Last Refresh Date (Usage)</label>
    <type>DateTime</type>
</CustomField>