force-app/main/default/objects/fpro__FieldPro__c/fields/fpro__References_Others__c.field-meta.xml
<CustomField>
    <fullName>fpro__References_Others__c</fullName>
    <description>List of misc. metadata this field is referenced in.</description>
    <inlineHelpText>List of misc. metadata this field is referenced in.</inlineHelpText>
    <label>References (Others)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>