force-app/main/default/objects/fpro__FieldPro__c/fields/fpro__References_ReportType__c.field-meta.xml
<CustomField>
    <fullName>fpro__References_ReportType__c</fullName>
    <description>List of report types this field is referenced in.</description>
    <inlineHelpText>List of report types this field is referenced in.</inlineHelpText>
    <label>References ReportType</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>