force-app/main/default/objects/fpro__FieldPro__c/fields/fpro__References_Visualforce_Components__c.field-meta.xml
<CustomField>
    <fullName>fpro__References_Visualforce_Components__c</fullName>
    <description>List of vf components this field is referenced on.</description>
    <inlineHelpText>List of vf components this field is referenced on.</inlineHelpText>
    <label>References (Visualforce Components)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>